# geodesie-de-bureau

./: Cargo.toml  README.md  database.txt  getNgfRnInfo.py  main.py  rn_types.py  roadmap.md  typing_classes.py
.github/workflows/: rust.yml
py_src/: main.py
py_src/cli_help/: aide  help  ign-nivf  quitter
py_src/ign/ngf/: getNgfRnInfo.py  requests_responses_parser.py  rn_types.py  typing_classes.py
py_src/save/: write_save.py
src/: cli_interface.rs  common_traits.rs  lib.rs  main.rs  save.rs
src/cli/: startup.rs
src/cli_interface/: cli_interface.rs  mod.rs
src/ign/ngf/: getNgfRnInfo.py  rn_types.py
src/json_mappings/: bbox.rs  mod.rs  repere.rs  save.rs
src/ngf/: mod.rs
src/ngf/json_mappings/: bbox.rs  mod.rs  repere.rs
template_db/data/types/: ngf.json
template_db/data/visites/2025/07/12/thisisanidapparently/: visite.json
